--- a/src/Pages/Inicio/inicio.module.css
+++ b/src/Pages/Inicio/inicio.module.css
@@ -1,4 +1,4 @@
-.post {
+.posts {
     padding: 0 6vw 3.625rem;
     display: flex;
     justify-content: center;
@@ -8,14 +8,15 @@
 }
 
 @media (max-width: 1100px) {
-    .post {
-        margin-top: 0;
+    .posts {
+        margin-top: -3rem;
         padding: 2rem 1.5rem 3.625rem;
     }
 }
 
 @media (max-width: 744px) {
-    .post {
+    .posts {
+        margin-top: 0;
         padding: 2rem 1rem 3rem;
     }
 }
